--- a/index.html
+++ b/index.html
@@ -16,57 +16,12 @@
       </ul>
     </nav>
 
-    <div ng-controller="mainController">
-
-    <h1>{{titre}}</h1>
-
-    <input type="text" ng-model="texteSaisi">
-    <input type="text" ng-model="texteSaisi2">
-    <button class="btn btn-primary" ng-click="reset()">Reset</button>
-
-    <div>{{texteSaisi}} {{texteSaisi2}}</div>
-    <h2>{{texteSaisi}}</h2>
-    <span ng-bind="texteSaisi">Chris</span>
-
-    <br><input type="checkbox" ng-model="isChecked">
-    <span ng-hide="isChecked">Afficher</span>
-    <span ng-show="isChecked">Masquer</span> le paragraphe
-    <p ng-show="isChecked">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum, enim, velit quo dolorum ducimus nemo pariatur distinctio illum reprehenderit fuga laboriosam ad quam sit nobis rem odit. Ex, ducimus, dolorem.</p>
-
-    <!-- Itération grâce à la directive ng-repeat -->
-    <div>
-      <input type="text" ng-model="search">
-      <select ng-model="selectedCountry">
-        <option>Choisir un pays</option>
-        <option
-          value="{{country}}"
-          ng-repeat="country in countries | orderBy">
-          {{country}}
-        </option>
-      </select>
-      <button ng-click="changeStyle()">Change style</button>
-    </div>
-
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th ng-click="changeOrder('name')" class="clicable">Nom</th>
-          <th ng-click="changeOrder('age')" class="clicable">Age</th>
-        </tr>
-      </thead>
-      <tr
-        ng-repeat="client in clients |
-          filter:{age:search, country:selectedCountry} |
-          orderBy:criterium:reverse"
-        ng-class="styleYoungest(client.age)">
-        <td>{{client.name}}</td>
-        <td>{{client.age}} ans</td>
-      </tr>
-    </table>
-
-  </div>
+    <div ng-view></div>
 
     <script src="scripts/angular.min.js"></script>
+    <script src="scripts/angular-route.min.js"></script>
+    <script src="scripts/util.js"></script>
     <script src="app/app.js"></script>
+    <script src="app/controllers/testController.js"></script>
   </body>
 </html>
