--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <!-- services/factories -->
     <script src="app/services/clientFactory.js"></script>
     <script src="app/services/testService.js"></script>
+    <script src="app/services/countryFactory.js"></script>
 
     <!-- filters -->
     <script src="app/filters/capitalizeFilter.js"></script>
