--- a/index.html
+++ b/index.html
@@ -34,5 +34,10 @@
     <!-- filters -->
     <script src="app/filters/capitalizeFilter.js"></script>
     <script src="app/filters/ellipseFilter.js"></script>
+
+    <!-- directives -->
+    <script src="app/directives/loremDirective.js"></script>
+    <script src="app/directives/clientDirective.js"></script>
   </body>
+
 </html>
